--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,50 @@
-flask
-gspread
-google-api-python-client
-google-auth-oauthlib
-google-auth-httplib2
-pandas
-matplotlib
-plotly
+blinker==1.8.2
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+contourpy==1.1.1
+cycler==0.12.1
+Flask==3.0.3
+fonttools==4.57.0
+google-api-core==2.24.2
+google-api-python-client==2.169.0
+google-auth==2.40.1
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+googleapis-common-protos==1.70.0
+gspread==6.2.0
+gunicorn==23.0.0
+httplib2==0.22.0
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.7
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+narwhals==1.39.0
+numpy==1.24.4
+oauthlib==3.2.2
+packaging==25.0
+pandas==2.0.3
+pillow==10.4.0
+plotly==6.0.1
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9.1
+setuptools
+six==1.17.0
+tzdata==2025.2
+uritemplate==4.1.1
+urllib3==2.2.3
+Werkzeug==3.0.6
+zipp==3.20.2
